# rust-birdflock

./: Cargo.toml
rayon/src/: main.rs
singlethread/: Cargo.toml
singlethread/src/: main.rs
src/: main.rs
threadpools/src/: main.rs
